fix extra accordion spacing

--- a/bundle/packages/vTeams/src/components/Queue/_Queue.scss
+++ b/bundle/packages/vTeams/src/components/Queue/_Queue.scss
@@ -9,8 +9,10 @@
   background-color: $color-white;
   font-size: $font-small;
   border-radius: 10px;
-  padding: 1rem;
+  //   padding: 1rem;
   align-items: center;
+  padding: 0.5rem 1rem;
+  margin: 5px auto;
 
   .font-bold {
     font-weight: $weight-heavy;
@@ -20,8 +22,6 @@
 .open-tickets-container {
   display: grid;
   grid-template-columns: 4fr 3fr 3fr 3fr;
-  padding: 0.5rem 1rem;
-  margin: 5px auto;
 
   .priority-dot {
     margin: auto 5px;
